# diol-cbind

./: Cargo.toml  README.md  cbindgen.toml  diol.h  diol.hpp  example.cpp
examples/: bindings.rs
src/: lib.rs
