[package]
name = "diol-cbind"
version = "0.8.2"
edition = "2021"
authors = ["sarah <>"]
description = "benchmark lib"
readme = "README.md"
repository = "https://github.com/sarah-ek/diol/"
license = "MIT"
keywords = ["benchmark"]

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
diol = { version = "0.8.2", path = "../diol", default-features = false }
equator = "0.2.0"
